2001-10-04  Sam Steingold  <sds@gnu.org>

	make COERCE error message more consistent
	* sequence.d (coerce_sequence): added a third argument error_p to
	indicate whether to return nullobj when result_type is
	not a sequence or to signal an error
	* lispbibl.d (coerce_sequence): updated the prototype
	* rexx.d (REXX-PUT): updated for the new coerce_sequence() signature
	* eval.d (SUBR-INFO, match_subr_key): ditto
	* foreign.d (convert_from_foreign): ditto
	* predtype.d (coerce_sequence_check): new function
	(COERCE): use it

2001-10-04  Sam Steingold  <sds@gnu.org>

	special file for deprecated functions
	* deprecated.lisp: added (define type-expand-1)
	* init.lisp: load deprecated.lisp
	* makemake.in (LPARTS): added deprecated

2001-10-04  Sam Steingold  <sds@gnu.org>

	expand compiler macros in C-FORM
	* compiler.lisp (expand-compiler-macro): new function
	(c-form, macroexpand-form): use it

2001-10-04  Sam Steingold  <sds@gnu.org>

	* type.lisp (clos-class): new function
	(typep, canonicalize-type, type-expand): use it

2001-10-03  Sam Steingold  <sds@gnu.org>

	limit DEFTYPE depth
	* predtype.d (expand_deftype): do not iterate more
	than (or *DEFTYPE-DEPTH-LIMIT* MOST-POSITIVE-FIXNUM) times
	* constsym.d, spvw.d (*DEFTYPE-DEPTH-LIMIT*): added

2001-10-03  Sam Steingold  <sds@gnu.org>

	EXPAND-DEFTYPE & TYPE-EXPAND accept an optional argument
	* predtype.d (expand_deftype): take the second arg once_p
	(EXPAND-DEFTYPE): take the second optional arg once-p
	* subr.d (expand-deftype): ditto
	* lispbibl.d (expand_deftype): ditto
	* sequence.d (valid_type): changed the expand_deftype() call
	* type.lisp (type-expand): take the second optional arg once-p
	* describe.lisp (describe-object): use type-expand

2001-10-03  Sam Steingold  <sds@gnu.org>

	* io.d (pr_enter_1): do not print the initial newline with
	definite single-liners

2001-10-02  Sam Steingold  <sds@gnu.org>

	* format.lisp (formatter-main-1): fixed quoting (colon-p and
	atsign-p must be under comma)
